RESOLVED FIXED139782
[WinCairo] Compile error in code for creating GL context.
https://bugs.webkit.org/show_bug.cgi?id=139782
Summary [WinCairo] Compile error in code for creating GL context.
peavo
Reported 2014-12-18 11:01:11 PST
The GLContext::createContextForWindow method has changed return type to std::unique_ptr.
Attachments
Patch (1.30 KB, patch)
2014-12-18 11:07 PST, peavo
no flags
peavo
Comment 1 2014-12-18 11:07:15 PST
Alex Christensen
Comment 2 2014-12-18 18:28:37 PST
Comment on attachment 243503 [details] Patch Thanks for keeping up with this. I'm working on some other urgent things right now, but I'll try to get a WinCairo build bot up soon so everybody can see and fix these simple compile problems.
WebKit Commit Bot
Comment 3 2014-12-18 19:04:59 PST
Comment on attachment 243503 [details] Patch Clearing flags on attachment: 243503 Committed r177558: <http://trac.webkit.org/changeset/177558>
WebKit Commit Bot
Comment 4 2014-12-18 19:05:05 PST
All reviewed patches have been landed. Closing bug.
peavo
Comment 5 2014-12-19 11:43:25 PST
(In reply to comment #2) > Comment on attachment 243503 [details] > Patch > > Thanks for keeping up with this. I'm working on some other urgent things > right now, but I'll try to get a WinCairo build bot up soon so everybody can > see and fix these simple compile problems. That would be very nice, thanks for reviewing :)
Note You need to log in before you can comment on or make changes to this bug.