[WinCairo] Compile error in code for creating GL context. https://bugs.webkit.org/show_bug.cgi?id=139782

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-12-18
Reviewed by Alex Christensen.

The GLContext::createContextForWindow method has changed return type to std::unique_ptr.

* WebCoreSupport/AcceleratedCompositingContext.h:

Canonical link: https://commits.webkit.org/157726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177558 268f45cc-cd09-0410-ab3c-d52691b4dbfc